--- a/maket/index.html
+++ b/maket/index.html
@@ -6,272 +6,12 @@
   <title>Портфолио</title>
 
   <link href="css/basis.css" rel="stylesheet">
-  <!-- <link href="css/outline-my.css" rel="stylesheet"> -->
   <link href="css/r-normalize-min.v8.0.1-2.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans:400,500,700">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <style>
-    body {
-      min-width: 960px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      min-height: 100vh;
-
-      color: #2c2c2c;
-      font-size: 18px;
-      font-family: "Roboto", "monospace";
-      line-height: 1.5;
-      background-color: #fff;
-    }
-    header {
-      /*background-color: #607D8B;
-      color: #fff;*/
-    }
-    main {
-      flex-grow: 1;
-    }
-
-    .container {
-      width: 960px;
-      margin: 0 auto;
-      padding: 0 20px;
-      box-sizing: border-box;
-      overflow: hidden;
-    }
-
-    .header {
-      display: flex;
-      margin: 90px 0 60px;
-      padding: 20px;
-    }
-    .header img {
-      border-radius: 50%;
-      box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.07);
-      border: 20px solid rgba(0, 0, 0, 0.17);
-      margin: 20px;
-      width: 250px;
-      height: 250px;
-    }
-    .header .name {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-left: 40px;
-      overflow: hidden;
-      color: #444;
-      font-weight: 600;
-    }
-    .header .name h1 {
-      margin: 0 0 10px;
-      font-size: 3em;
-    }
-    .header .name h4 {
-      margin: 0 0 20px;
-      font-size: 1.5em;
-    }
-
-    .header .name ul {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      font-size: 1.1em;
-    }
-    .header .name li {
-      padding: 0.3em 1em 0.3em 0;
-    }
-    .header .name a {
-      /*padding-left: 0.5em;
-      font-size: 1em;
-      color: #455A64;*/
-      text-decoration: none;
-    }
-    .header .name a i {
-      margin-right: 0.5em;
-    }
-    .header .name li:last-child .github {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-    }
-    .header .name li:last-child .github i {
-      font-size: 2em;
-      margin: 0;
-    }
-    
-
-
-
-    nav.main {
-      /*background-color: #546E7A;
-      border-top: 1px solid #37474F;
-      box-shadow: 0px 10px 20px 0px #546E7A;*/
-      /*border-bottom: 1px solid #c9c9c9;*/
-      width: 100%;
-      position: fixed;
-      background: #FFFFFF;
-      z-index: 1;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    }
-    nav.main ul {
-      display: flex;
-      justify-content: space-evenly;
-      padding: 0.5em 0;
-      list-style: none;
-    }
-    nav.main li {
-      /*margin: 0px 10px;*/
-    }
-    nav.main a {
-      display: block;
-      width: 9em;
-      padding: 0.5em 1em;
-      color: #5a5a5a;
-      font-size: 0.9em;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-    }
-    nav.main .home a {
-      width: 4em;
-      padding: 0;
-    }
-    nav.main .home .fa-home:before {
-      font-size: 2em;
-      position: relative;
-      top: 0.1em;
-      padding-bottom: 0.1em;
-    }
-    nav.main .home.active .fa-home:before {
-      border-bottom: 1px solid #5a5a5a;
-    }
-
-
-    nav.main a span {
-      padding: 0.5em 0;
-    }
-    nav.main a span:last-child {
-      display: none;
-    }
-    nav.main a span:last-child::before,
-    nav.main a span:last-child::after {
-      position: absolute;
-    }
-    nav.main a span:last-child::before {
-      content: '{{ ';
-      margin-left: -1.5em;
-    }
-    nav.main a span:last-child::after {
-      content: ' }}';
-      margin-left: 0.5em;
-    }
-
-    nav.main .active span:first-child {
-      border-bottom: 1px solid #5a5a5a;
-    }    
-
-    nav.main .active a,
-    nav.main a:hover {
-      color: #000;
-      /*background-color: #cfd8dc;*/
-    }
-    nav.main a:hover span:first-child {
-      display: none;
-    }
-    nav.main a:hover span:last-child {
-      display: inline;
-    }
-
-    main {
-      background-color: #fff;
-    }
-
-    h2 {
-      position: relative;
-      margin-top: 50px;
-      font-size: 25px;
-      text-align: left;
-      border-bottom: 2px solid #e3e3e3;
-    }
-
-    h2.fun span{
-      position: absolute;
-      right: 0;
-      font-size: 0.5em;
-      color: darkgray;
-      bottom: 0;
-    }
-
-   
-    footer {
-      margin-top: 5em;
-      box-shadow: 0 -2px 5px 0 rgba(0, 0, 0, 0.16), 0 -2px 10px 0 rgba(0, 0, 0, 0.12);
-    }
-    footer .container {
-      display: flex;
-      justify-content: space-between;
-    }
-    footer .container nav {
-      flex-grow: 1;
-    }
-    footer .container ul {
-      display: flex;
-      justify-content: space-around;
-      margin: 1em 0;
-      padding: 0;
-      list-style: none;
-    }
-    footer .container li a {
-      display: flex;
-      justify-content: space-around;
-      flex-direction: column;
-      /*color: #999;*/
-      text-align: center;
-      text-decoration: none;
-    }
-    footer .container li i {
-      font-size: 2em;
-      margin: 0 0 0.3em;
-    }
-
-    .contacts li a {
-      filter: grayscale(90%);
-    }
-    .contacts li a:hover {
-      filter: grayscale(0);
-    }
-
-    li a.gmail {
-      color: #ea4335;
-    }
-    li a.phone {
-      color: #31d059;
-    }
-    li a.telegram {
-     color: #24a2e0;
-    }
-    li a.skype {
-      color: #00b0ef;
-    }
-    li a.linkedin {
-      color: #0a66c2;
-    }
-    li a.github {
-      color: #161b22;
-    }
-    li a.github:hover {
-      color: #416487;
-    }
-
-
-  </style>
-
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body id="home">
   <nav class="main">
     <ul class="container">
@@ -537,6 +277,13 @@
         </ul>
       </section>
 
+      <section>
+        <h2>Рекомендации (? оставить-удалить ?)</h2>
+        За рекомендациями можно обратиться к коллеге, Кондрашову Роману,
+        который является опытным Laravel-разработчиком в компании "Бла-Бла", бывший сотрудник game-dev компании "Никита".<br>
+        Кондрашов Роман, +7(123)456-78-90, 
+      </section>
+
     </div>
   </main>
 
@@ -593,34 +340,7 @@
     </div>
   </footer>
 
-<script>
-'use strict';
+  <script src="js/script.js" type="text/javascript"></script>
 
-( function() {
-
-const topOffset = document.querySelector('nav.main').offsetHeight + 12;
-document.querySelectorAll('nav.main a[href^="#"').forEach(link => {
-
-    link.addEventListener('click', function(evt) {
-        evt.preventDefault();
-
-        let href = this.getAttribute('href').substring(1);
-
-        document.querySelector('nav.main .active').classList.remove("active");
-        const currentMenu = this.parentElement;
-        currentMenu.classList.add("active");
-
-        const scrollTarget = document.getElementById(href);
-        const elementPosition = scrollTarget.getBoundingClientRect().top;
-        const offsetPosition = elementPosition - topOffset;
-
-        window.scrollBy({
-            top: offsetPosition,
-            behavior: 'smooth'
-        });
-    });
-});
-})();
- </script>
 </body>
 </html>
