Переоформление секции Обучение

--- a/maket/index.html
+++ b/maket/index.html
@@ -290,52 +290,72 @@
       <section id="education">
         <h2 class="fun">Образование / Обучение <span>SHOW TABLES\G</span></h2>
         <ul class="list">
-          <li>
-            2018 - 2020<br>
 
-            <a href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank">
-              <!-- <b class="courses-logo logo-hexlet">Hexlet</b> -->
-              <img src="img/hexlet.jpg" width="154px" alt="Hexlet">
-              <br>общедоступные курсы
-            </a>
-          </li>
-
-          <li>2018 - 2019<br>
-              <a href="https://htmlacademy.ru/profile/id14311/progress" target="_blank">
-                <!-- <b class="courses-logo logo-htmlacademy">HtmlAcademy</b> -->
-                <img src="img/htmlacademy.svg" alt="HtmlAcademy">
-                <br>общедоступные курсы
-              </a>
-          </li>
-
-          <li>
-            2019 - 2020<br>
-            <a href="https://www.sololearn.com/Profile/16609287/" target="_blank">
+          <li class="d-flex f-align-center">
+            <a class="mr-2" href="https://www.sololearn.com/Profile/16609287/" target="_blank">
               <!-- <b class="courses-logo logo-sololearn">SoloLearn</b> -->
               <img src="img/sololearn.svg" alt="SoloLearn">
-            </a><br>
+            </a>
             <div>
-              PHP - https://www.sololearn.com/Certificate/1059-16609287/pdf/<br>
-              SQL - https://www.sololearn.com/Certificate/1060-16609287/pdf/<br>
-              HTML - https://www.sololearn.com/Certificate/1014-16609287/pdf/<br>
-              CSS - https://www.sololearn.com/Certificate/1023-16609287/pdf/<br>
+              <b>2019 - 2020</b><br>
+              Сертификаты:
+              <div class="d-flex f-jc-between">
+                
+                <a class="mr-2" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/">PHP</a><br>
+                <a class="mr-2" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/">SQL</a><br>
+                <a class="mr-2" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/">HTML</a><br>
+                <a href="https://www.sololearn.com/Certificate/1023-16609287/pdf/">CSS</a><br>
+                </div>
               <div class="visually-hidden">
                 JS - https://www.sololearn.com/Certificate/-16609287/pdf/<br>
                 jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
               </div>
             </div>
           </li>
+          
+          <!-- <div class="d-flex f-jc-between"> -->
+            <li class="d-flex f-align-center">
+              <a class="mr-2" href="https://ru.hexlet.io/u/avxodiar/" target="_blank">
+                <!-- <b class="courses-logo logo-hexlet">Hexlet</b> -->
+                <img src="img/hexlet.jpg" width="154px" alt="Hexlet">
+              </a>
+              <p><b>2018 - 2020</b><br>
+                  <a href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank">общедоступные курсы: Html, Css, Php, Git</a>
+              </p>
+            </li>
 
-          <li>2012 - 2017<br>
-            <img src="img/1c-bitrix.svg" width="246px" alt="1C:Битрикс"><br>
-            Сертификаты Битрикс
+            <li class="d-flex f-align-center">
+              <a class="mr-2" href="https://htmlacademy.ru/profile/id14311/" target="_blank">
+                <!-- <b class="courses-logo logo-htmlacademy">HtmlAcademy</b> -->
+                <img src="img/htmlacademy.svg" alt="HtmlAcademy">
+              </a>
+              <p><b>2018 - 2019</b><br>
+                 <a href="https://htmlacademy.ru/profile/id14311/progress" target="_blank">общедоступные курсы: Html, Css</a>
+              </p>
+            </li>
+          <!-- </div> -->
+
+
+          <li class="d-flex f-align-center">
+            <img class="mr-2" src="img/1c-bitrix.svg" width="246px" alt="1C:Битрикс">
+            <p class="mr-2">
+              <b>2012 - 2017</b><br>
+              Фреймворк 1С:Bitrix
+            </p>
+            <p>Сертификаты:<br>
+                BX-DEV001, BXS-CM
+            </p>
           </li>
 
-          <li>1997 - 2002<br>
-            <img src="img/politeh.jpg" width="50px" alt="1C:Битрикс"><br>
-            <b class="courses-logo logo-pgtu">ПГТУ (г. Пенза)</b><br>
-              специальность "Инженер-системотехник"
+          <li class="d-flex f-align-center">
+            <img class="mr-2" src="img/politeh.jpg" width="100px" alt="ПГТУ">
+            <p>
+              <b>1997 - 2002</b><br>
+              <b>ПГТУ (г. Пенза)</b><br>
+                специальность "Инженер-системотехник"
+            </p>
           </li>
+
         </ul>
       </section>
 
