--- a/maket/index.html
+++ b/maket/index.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Портфолио</title>
 
-  <link href="css/basis.css" rel="stylesheet">
-  <link href="css/r-normalize-min.v8.0.1-2.css" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans:400,500,700">
+  <link rel="stylesheet" href="css/r-normalize-min.v8.0.1-2.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/basis.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +16,7 @@
     <ul class="container">
       <li class="home active">
         <a href="#home" aria-label="Главная">
-          <i class="fa fa-home fa-2" aria-hidden="true"></i>
+          <i class="fa fa-home" aria-hidden="true"></i>
         </a>
       </li>
       <li><a href="#about">
