--- a/maket/index.html
+++ b/maket/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Портфолио</title>
+  <meta name="Description" content="Портфолио php-программиста">
+  <meta name="Keywords" content="Портфолио, php, laravel">
+  <meta name="Author" content="Харитов Андрей Владимирович">
+  <meta name="Copyright" content="Харитов Андрей Владимирович">
+  <title>Харитов Андрей, портфолио. PHP-программист.</title>
 
   <link rel="stylesheet" href="css/r-normalize-min.v8.0.1-2.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -55,45 +59,39 @@
         <img src="img/avatar.jpg" width=250px height=250px alt="Мое фото">
         <div class="name">
           <h1>Харитов Андрей</h1>
-          <h4>PHP Программист</h4>
+          <h2>PHP Программист</h2>
 
           <ul class="contacts">
-            <div>
-              <li>
-                <a class="telegram" href="tg://resolve?domain=convergent">
-                  <i class="fa fa-telegram" aria-hidden="true"></i>
-                  Telegram
-                </a>
-              </li>
-              <li>
-                <a class="gmail" href="mailto:avxodiar@gmail.com">
-                  <i class="fa fa-envelope"></i>
-                  @Gmail
-                </a>
-              </li>
-            </div>
-            <div>
-              <li>
-                <a class="skype" href="skype:live:.cid.94ad1db13e9980e2">
-                  <i class="fa fa-skype"></i>
-                  Skype
-                </a>
-              </li>          
-              <li>
-                <a class="linkedin" href="https://www.linkedin.com/in/avxodiar">
-                  <i class="fa fa-linkedin-square"></i>
-                  LinkedIn
-                </a>
-              </li>
-            </div>
-            <div>
-              <li>
-                <a class="github" href="https://github.com/Avxodiar">
-                  <i class="fa fa-github"></i>
-                  GitHub
-                </a>
+            <li aria-label="Telegram">
+              <a class="telegram" href="tg://resolve?domain=convergent">
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+                Telegram
+              </a>
             </li>
-            </div>
+            <li aria-label="Skype">
+              <a class="skype" href="skype:live:.cid.94ad1db13e9980e2">
+                <i class="fa fa-skype"></i>
+                Skype
+              </a>
+            </li>
+            <li aria-label="Gmail">
+              <a class="gmail" href="mailto:avxodiar@gmail.com">
+                <i class="fa fa-envelope"></i>
+                @Gmail
+              </a>
+            </li>
+            <li aria-label="LinkedIn">
+              <a class="linkedin" href="https://www.linkedin.com/in/avxodiar" target="_blank" rel="nofollow noopener">
+                <i class="fa fa-linkedin-square"></i>
+                LinkedIn
+              </a>
+            </li>
+            <li class="big" aria-label="GitHub">
+              <a class="github rotate" href="https://github.com/Avxodiar">
+                <i class="fa fa-github"></i>
+                GitHub
+              </a>
+            </li>
           </ul>
 
         </div>
@@ -102,12 +100,10 @@
   </header>
 
 
-
-
   <main>
     <div class="container">
       <section id="about" class="anchor">
-        <h2 class="fun">Обо мне<span>Route::view('about', 'default@about');</span></h2>
+        <h3 class="fun">Обо мне<span>Route::view('about', 'default@about');</span></h3>
         <p>
           Занимаюсь веб-разработкой с 2008г. Имею достаточно большой опыт решения задач,
           поиска и устранения проблем, а также задач по оптимизации.<br>
@@ -121,22 +117,22 @@
       </section>
 
       <section id="skills">
-        <h2 class="fun">Навыки и опыт<span>ls -lhF | grep -isv 'hobby'</span></h2>
+        <h3 class="fun">Навыки и опыт<span>ls -lhF | grep -isv 'hobby'</span></h3>
         <ul>
-          <li>Laravel, PHP5/7, MySQL</li>
+          <li>Laravel, PHP 5/7, MySQL</li>
           <li>Git (ранее Svn), Composer</li>
           <li>HTML5, CSS3, Bootstrap, Blade, Сементическая верстка</li>
           <li>JavaScript, jQuery</li>
           <li>Unix (Fedora, Ubuntu, Debian) / Bash / CLI</li>
-          <li>CMS: Bitrix 6.x/9.x, Joomla 1.x/3,x</li>
+          <li>CMS: 1C:Bitrix, Joomla</li>
           <li>Софт: PhpStorm, Sublime, SqlWorkbench, Meld, Postman </li>
           <li>Софт для Win: WinSCP, Putty, OpenServer, Cmder, HeidiSql, Notepad++</li>
-          <li>Английский язык: Уровень Elementary / Pre–Intermediate (A2)</li>
+          <li>Английский язык: Уровень Elementary</li>
         </ul>
       </section>
 
       <section id="projects">
-        <h2 class="fun">Проекты<span>git branch -a --list</span></h2>
+        <h3 class="fun">Проекты<span>git branch -a --list</span></h3>
         <div>
           <label>2020</label>
           <ul>
@@ -182,9 +178,8 @@
         <div>
           <label>2012-2017 (1С:Bitrix)</label>
           <ul>
-            <li>
-              рабочий проект: <a href="http://shop.mts.ru/">магазин МТС</a>
-            <p><a href="http://shop.mts.ru/">Проект магазина МТС</a> реализован на 1С:Битрикс, однако очень много функционала было самописное и/или с использованием фреймворков, например весь функционал по построению маршрутов/времени доставки для товаров в заказах осуществлялось с использованием Laravel, кэширование данных о товарах с использованием memcached, а обработка заказов в очереди через RabbitMQ. Первоначально проект был на SVN, но затем был перенесен на GIT.</p>
+            <li>Рабочий проект: <a href="http://shop.mts.ru/" target="_blank" rel="nofollow noopener">магазин МТС</a>
+            <p>Проект магазина МТС реализован на 1С:Битрикс, однако очень много функционала было самописное и/или с использованием фреймворков, например весь функционал по построению маршрутов/времени доставки для товаров в заказах осуществлялось с использованием Laravel, кэширование данных о товарах с использованием memcached, а обработка заказов в очереди через RabbitMQ. Первоначально проект был на SVN, но затем был перенесен на GIT.</p>
 
             <h4>Непосредственное участие по реализации следующего функционала</h4>
             <ul class="qsoft-log">
@@ -226,7 +221,7 @@
           <ul>
             <li>2011 магазин models-buy (закрыт 2016)</li>
             <li>
-              <a href="http://models-paper.com/">
+              <a href="http://models-paper.com/" target="_blank" rel="nofollow noopener">
                 2010 ОКБ "Бумажные модели"
               </a>
             </li>
@@ -237,7 +232,7 @@
           <label>2008 (PHP/HTML/CSS)</label>
           <ul>
             <li>
-              <a href="http://nasha-dacha.com/">
+              <a href="http://nasha-dacha.com/" target="_blank" rel="nofollow noopener">
                  "Наша Дача"
               </a>
             </li>
@@ -246,7 +241,7 @@
       </section>
 
       <section id="expirience">
-        <h2 class="fun">Опыт работы<span>git log --pretty=format:"%ad %an %s %d" --date=short</span></h2>
+        <h3 class="fun">Опыт работы<span>git log --pretty=format:"%ad %an %s %d" --date=short</span></h3>
 
         <ul class="list">
           <li>
@@ -262,7 +257,7 @@
               </div>
               <p>
                 Фриланс<br>
-                <a class="link" href="#projects">Персональные web-проекты</a></p>
+                <a class="link to-anchor" href="#projects">Персональные web-проекты</a></p>
             </div>
           </li>
 
@@ -272,11 +267,11 @@
                 (г. Москва)
               </p>
               <div class="logo mx-2">
-                <img src="img/qsoft.svg" width="249px" alt="QSOFT">  
+                <img src="img/qsoft.svg" width="249px" height="48px" alt="QSOFT">
               </div>
               <p>
                 Главный програмист<br>
-                <a class="external-link" href="https://qsoft.ru/project/563/" target="_blank">Отдела тех.поддержки и<br> развития проекта <b>МТС</b></a></p>
+                <a class="external-link" href="https://qsoft.ru/project/563/" target="_blank" rel="nofollow noopener">Отдела тех.поддержки и<br> развития проекта <b>МТС</b></a></p>
             </div>
           </li>
 
@@ -299,13 +294,13 @@
       </section>
 
       <section id="education">
-        <h2 class="fun">Образование <span>SELECT `logo`,`time`,`describe` FROM `educations` ORDER BY `data` DESC\G</span></h2>
+        <h3 class="fun">Образование <span>SELECT `logo`,`time`,`describe` FROM `educations` ORDER BY `data` DESC\G</span></h3>
         <ul class="list">
 
           <li class="d-flex f-align-center">
-            <a class="logo" href="https://www.sololearn.com/Profile/16609287/" target="_blank">
+            <a class="logo" href="https://www.sololearn.com/Profile/16609287/" target="_blank" rel="nofollow noopener">
               <!-- <b class="courses-logo logo-sololearn">SoloLearn</b> -->
-              <img src="img/sololearn.svg" width="250px" alt="SoloLearn">
+              <img src="img/sololearn.svg" width="250px" height="37px" alt="SoloLearn">
             </a>
             <div class="mr-2">
               <b>2019 - 2020</b><br>
@@ -314,10 +309,10 @@
             <div>
               Сертификаты:
               <div class="d-flex f-jc-between">
-                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank">PHP</a>
-                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/" target="_blank">SQL</a>
-                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank">HTML</a>
-                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank">CSS</a>
+                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1059-16609287/pdf/" target="_blank" rel="nofollow noopener">PHP</a>
+                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1060-16609287/pdf/" target="_blank" rel="nofollow noopener">SQL</a>
+                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1014-16609287/pdf/" target="_blank" rel="nofollow noopener">HTML</a>
+                <a class="mr-1 external-link" href="https://www.sololearn.com/Certificate/1023-16609287/pdf/" target="_blank" rel="nofollow noopener">CSS</a>
                 <div class="hidden">
                   JS - https://www.sololearn.com/Certificate/-16609287/pdf/<br>
                   jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
@@ -328,22 +323,22 @@
 
           <!-- <div class="d-flex f-jc-between"> -->
             <li class="d-flex f-align-center">
-              <a class="logo" href="https://ru.hexlet.io/u/avxodiar/" target="_blank">
+              <a class="logo" href="https://ru.hexlet.io/u/avxodiar/" target="_blank" rel="nofollow noopener">
                 <!-- <b class="courses-logo logo-hexlet">Hexlet</b> -->
-                <img src="img/hexlet.jpg" width="154px" alt="Hexlet">
+                <img src="img/hexlet.jpg" width="154px" height="48px" alt="Hexlet">
               </a>
               <p><b>2018 - 2020</b><br>
-                  <a class="external-link" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank">общедоступные курсы: Html, Css, Php, Git</a>
+                  <a class="external-link" href="https://ru.hexlet.io/u/avxodiar/courses" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css, Php, Git</a>
               </p>
             </li>
 
             <li class="d-flex f-align-center">
-              <a class="logo" href="https://htmlacademy.ru/profile/id14311/" target="_blank">
+              <a class="logo" href="https://htmlacademy.ru/profile/id14311/" target="_blank" rel="nofollow noopener">
                 <!-- <b class="courses-logo logo-htmlacademy">HtmlAcademy</b> -->
-                <img src="img/htmlacademy.svg" alt="HtmlAcademy">
+                <img src="img/htmlacademy.svg"  width="142px" height="48px" alt="HtmlAcademy">
               </a>
               <p><b>2018 - 2019</b><br>
-                 <a class="external-link" href="https://htmlacademy.ru/profile/id14311/progress" target="_blank">общедоступные курсы: Html, Css</a>
+                 <a class="external-link" href="https://htmlacademy.ru/profile/id14311/progress" target="_blank" rel="nofollow noopener">общедоступные курсы: Html, Css</a>
               </p>
             </li>
           <!-- </div> -->
@@ -351,7 +346,7 @@
 
           <li class="d-flex f-align-center">
             <div class="logo">
-              <img src="img/1c-bitrix.svg" width="246px" alt="1C:Битрикс">
+              <img src="img/1c-bitrix.svg" width="246px" height="48px" alt="1C:Битрикс">
             </div>
             <p class="mr-2">
               <b>2012 - 2017</b><br>
@@ -360,15 +355,15 @@
             <div>
               Сертификаты:
               <div class="d-flex f-jc-between">
-                <a class="mr-1 link" href="img/certificates/bitrix_BXS-CM.pdf" target="_blank">BXS-CM</a>
-                <a class="mr-1 link" href="img/certificates/bitrix_BX-DEV001.pdf" target="_blank">BX-DEV001</a>
+                <a class="mr-1 link" href="img/certificates/bitrix_BXS-CM.pdf" target="_blank" rel="nofollow noopener">BXS-CM</a>
+                <a class="mr-1 link" href="img/certificates/bitrix_BX-DEV001.pdf" target="_blank" rel="nofollow noopener">BX-DEV001</a>
               </div>
             </div>
           </li>
 
           <li class="d-flex f-align-center">
             <div class="logo">
-              <img class="mr-2" src="img/politeh.jpg" width="100px" alt="ПГТУ">
+              <img class="mr-2" src="img/politeh.jpg" width="100px" height="98px" alt="ПГТУ">
             </div>
             <p>
               <b>1997 - 2002</b><br>
@@ -386,45 +381,39 @@
   <footer>
     <div class="container">
       <nav>
-        <h3 class="visually-hidden">Ссылки</h3>
+        <h4 class="visually-hidden">Ссылки</h4>
         <ul class="contacts">
-          <li>
+          <li aria-label="Telegram">
             <a class="telegram" href="tg://resolve?domain=convergent">
               <i class="fa fa-telegram" aria-hidden="true"></i>
               Telegram
             </a>
           </li>
-          <li>
+          <li aria-label="Gmail">
             <a class="gmail" href="mailto:avxodiar@gmail.com">
               <i class="fa fa-envelope"></i>
               @Gmail
             </a>
           </li>
-          <!--li>
-            <a class="phone" href="tel:+1234567890">
-              <i class="fa fa-phone-square"></i>
-              +7(123)456-78-90
-            </a>
-          </li-->
-          <li>
+          <li aria-label="Skype">
             <a class="skype" href="skype:live:.cid.94ad1db13e9980e2?chat">
               <i class="fa fa-skype"></i>
               Skype1
             </a>
           </li>
-          <li>
+          <li aria-label="Skype">
             <a class="skype" href="skype:.cid.94ad1db13e9980e2">
               <i class="fa fa-skype"></i>
               Skype2
             </a>
           </li>
-          <li>
+          <li aria-label="LinkedIn">
             <a class="linkedin" href="https://www.linkedin.com/in/avxodiar">
               <i class="fa fa-linkedin-square"></i>
               LinkedIn
             </a>
           </li>
-          <li>
+          <li aria-label="GitHub">
             <a class="github" href="https://github.com/Avxodiar">
               <i class="fa fa-github"></i>
               GitHub
